[tool.poetry]
name = "flask-web-templates"
version = "0.1.0"
description = ""
authors = ["Aran Borkum <aranborkum@hotmail.com>"]
readme = "README.md"
packages = [{include = "flask_web_templates"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
flask-socketio = "^5.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
